[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/item/ButtonCap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/item/Button.gd" type="Script" id=2]
[ext_resource path="res://scenes/item/ButtonBase.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sound/buzz-ok.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/item/ButtonStick.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/img/button-base-front.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/ButtonBase/ButtonCap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/ButtonBase/ButtonStick:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "click"
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/ButtonBase/ButtonCap:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -120 ), Vector2( 0, -80 ), Vector2( 0, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Ok:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/ButtonBase/ButtonStick:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -100 ), Vector2( 0, -60 ), Vector2( 0, -100 ) ]
}

[node name="Button" type="Node2D"]
script = ExtResource( 2 )

[node name="Ok" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/click = SubResource( 1 )

[node name="Pivot" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="ButtonBase" parent="Pivot" instance=ExtResource( 3 )]

[node name="ButtonStick" parent="Pivot/ButtonBase" instance=ExtResource( 5 )]
position = Vector2( 0, -100 )

[node name="ButtonBaseFront" type="Sprite" parent="Pivot/ButtonBase"]
position = Vector2( 0, -46 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="Pivot/ButtonBase/ButtonBaseFront"]
priority = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Pivot/ButtonBase/ButtonBaseFront/Area2D"]
polygon = PoolVector2Array( -52, -78, -42, -60, 2, -48, 40, -58, 54, -78, 102, -38, 38, 50, -38, 50, -100, -38 )

[node name="ButtonCap" parent="Pivot/ButtonBase" instance=ExtResource( 1 )]
modulate = Color( 0.772549, 0, 0, 1 )
position = Vector2( 0, -120 )

[connection signal="clicked" from="Pivot/ButtonBase/ButtonStick" to="." method="_on_ButtonStick_clicked"]
[connection signal="clicked" from="Pivot/ButtonBase/ButtonCap" to="." method="_on_ButtonCap_clicked"]
